--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,15 @@
-$primary-color: #cfddcd;
+$primary-color: #fff;
+$jumbotron-bg: #f1f1f1;
+$fa-font-path: '~font-awesome/fonts';
+
 @import "~bootstrap/scss/bootstrap";
+@import "~font-awesome/scss/font-awesome.scss";
+
+
 body {
     background: $primary-color;
+}
+.jumb {
+
+    background-color: $jumbotron-bg;
 }
