--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -4,6 +4,7 @@ $fa-font-path: '~font-awesome/fonts';
 
 @import "~bootstrap/scss/bootstrap";
 @import "~font-awesome/scss/font-awesome.scss";
+@import "~startbootstrap-sb-admin/css/sb-admin.css";
 
 
 body {
