--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,9 +2,11 @@ $primary-color: #fff;
 $jumbotron-bg: #f1f1f1;
 $fa-font-path: '~font-awesome/fonts';
 
-@import "~bootstrap/scss/bootstrap";
 @import "~font-awesome/scss/font-awesome.scss";
+@import "~@fortawesome/fontawesome-free/css/all.css";
+@import "~bootstrap/scss/bootstrap";
 @import "~startbootstrap-sb-admin/css/sb-admin.css";
+@import "~datatables.net-bs4/css/dataTables.bootstrap4.css";
 
 
 body {
