--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -19,7 +19,8 @@
                         <input type="password" class="form-control" id="password" name="_password"
                                placeholder="Entrer Mot de passe">
                     </div>
-                    <input type="hidden" name="_target_path" value="{{ path('project') }}"/>
+                    <input type="hidden" name="_csrf_token"
+                           value="{{ csrf_token('authenticate') }}" >
                     <button type="submit" class="btn btn-primary"><i class="fa fa-arrow-circle-right fa-lg"></i>
                         Connexion
                     </button>
