add user list twig view

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -59,7 +59,7 @@
                 <span>Users & Groups</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-                <a class="dropdown-item" href="/admin/user">Users</a>
+                <a class="dropdown-item" href={{ path('userList') }}>Users</a>
                 <a class="dropdown-item" href="/admin/user-group">Groups</a>
             </div>
         </li>
