UserService and UserController for displaying list

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -10,6 +10,7 @@ $mycostum-color:#6666ff;
 @import "~datatables.net-bs4/css/dataTables.bootstrap4.css";
 @import "~bootstrap-multiselect/dist/css/bootstrap-multiselect.css";
 @import "~jquery-ui/themes/base/all.css";
+@import "~layui-src/build/css/layui.css";
 
 
 body {
