--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -20,9 +20,10 @@
                     <i class="fas fa-users"></i> Users
                 </div>
                 <div class="col">
-                    <a class="btn btn-primary btn-sm float-right ml-3" href="#">Create new</a>
-                    <a class="btn btn-primary btn-sm float-right ml-3"
-                       onclick="document.getElementById('filter-form').submit();" href="javascript:void(0)">Filter</a>
+                    <a class="layui-btn layui-btn-normal float-right ml-3" href="#"><i class="layui-icon">&#xe654;</i></a>
+                    <a class="layui-btn layui-btn-normal float-right ml-3"
+                       onclick="document.getElementById('filter-form').submit();" href="javascript:void(0)">
+                        <i class="layui-icon">&#xe615;</i></a>
                     <form id="filter-form" class="float-right" action="" method="GET">
                         <input class="form-control form-control-sm" type="text" name="email" value="{{ emailFilter }}"
                                placeholder="User E-mail"/>
