--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,25 +7,22 @@
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
 </head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="{{ path('home') }}">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+{% if show is defined and show== true %}
+    {% set class_body = '' %}
+{% else %}
+    {% set class_body = 'bg-dark' %}
+{% endif %}
+<body class={{ class_body }}>
+{% if show is defined and show== true %}
+    {% include 'navigation/navigation.html.twig' %}
+{% endif %}
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link {% if current_menu is defined and current_menu=='menu' %}active{% endif %}" href="{{ path('project') }}">Mes projets <span class="sr-only">(current)</span></a>
-            </li>
-        </ul>
-    </div>
-</nav>
 {% block body %}{% endblock %}
+
 {% block javascripts %}
     {{ encore_entry_script_tags('app') }}
-
 {% endblock %}
+
 </body>
+
 </html>
