--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,38 +1,46 @@
 {% extends 'base.html.twig' %}
-
 {% block title %} Login page {% endblock %}
 
 {% block body %}
-    <form action="{{ path('login') }}" method="post">
-        <div class="container mt-4">
-            <div class="jumbotron jumb">
-                <h1 class="text-center">Connexion</h1>
+
+    <div class="container mt-5">
+        <div class="card card-login mx-auto  login100-form-title"
+             style="background-image: url({{ asset('build/assets/images/bg-01.ff63ad61.jpg') }});">
+        </div>
+        <div class="card card-login mx-auto mt-4">
+            <div class="card-header">Login</div>
+            <div class="card-body">
                 <form action="{{ path('login') }}" method="post">
                     <div class="form-group">
-                        <label for="username">Identifiant</label>
-                        <input type="text" class="form-control" id="username" name="_username"
-                               value="{{ last_username }}"
-                               placeholder="Entrer utilisateur">
+                        <div class="form-label-group">
+                            <input type="text" id="username" name="_username" class="form-control"
+                                   placeholder="User or Email"
+                                   required="required" value="{{ last_username }}" autofocus="autofocus">
+                            <label for="username">Identifiant</label>
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label for="password">Mot de passe</label>
-                        <input type="password" class="form-control" id="password" name="_password"
-                               placeholder="Entrer Mot de passe">
+                        <div class="form-label-group">
+                            <input type="password" id="password" name="_password" class="form-control"
+                                   placeholder="Password"
+                                   required="required">
+                            <label for="password">Password</label>
+                        </div>
                     </div>
                     <input type="hidden" name="_csrf_token"
-                           value="{{ csrf_token('authenticate') }}" >
-                    <button type="submit" class="btn btn-primary"><i class="fa fa-arrow-circle-right fa-lg"></i>
+                           value="{{ csrf_token('authenticate') }}">
+                    <button type="submit" class="layui-btn layui-btn-normal"><i
+                                class="fa fa-arrow-circle-right fa-lg"></i>
                         Connexion
                     </button>
+                    {% if error %}
+                        <div class="alert alert-danger mt-2" role="alert">
+                            {{ error.messageKey|trans(error.messageData, 'security') }}
+                        </div>
+                    {% endif %}
                 </form>
             </div>
-            {% if error %}
-            <div class="container mt-4">
-                <div class="alert alert-danger" role="alert">
-                    {{ error.messageKey|trans(error.messageData, 'security') }}
-                </div>
-            </div>
         </div>
-        {% endif %}
-    </form>
+    </div>
+
 {% endblock %}
