Add form type symfony (what you have to do get the request submit data and save it to database)

--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -20,7 +20,7 @@
                     <i class="fas fa-users"></i> Users
                 </div>
                 <div class="col">
-                    <a class="layui-btn layui-btn-normal float-right ml-3" href="#"><i class="layui-icon">&#xe654;</i></a>
+                    <a class="layui-btn layui-btn-normal float-right ml-3" href="{{ path("new") }}"><i class="layui-icon">&#xe654;</i></a>
                     <a class="layui-btn layui-btn-normal float-right ml-3"
                        onclick="document.getElementById('filter-form').submit();" href="javascript:void(0)">
                         <i class="layui-icon">&#xe615;</i></a>
