--- a/templates/admin/user/_form.html.twig
+++ b/templates/admin/user/_form.html.twig
@@ -16,15 +16,29 @@
             {{ form_row(form.roles) }}
         </div>
     </div>
+
     <div class="row">
         <div class="col">
             {{ form_row(form.isActive) }}
         </div>
 
+        <div class="col">
+            {{ form_row(form.UserDetails.street) }}
+        </div>
     </div>
+    <div class="row">
+        <div class="col">
+            {{ form_row(form.UserDetails.city) }}
+        </div>
+
+        <div class="col">
+            {{ form_row(form.UserDetails.country) }}
+        </div>
+    </div>
+    {{ form_row(form.UserDetails.image) }}
     {{ include('validator/form.errors.html.twig') }}
-    <button class="layui-btn layui-btn mt-5 ">{{ button_label|default('Save') }}</button>
-    <a class="layui-btn layui-btn layui-btn-normal mt-5" href="{{ path('userList') }}">Back to list</a>
+    <button class="layui-btn layui-btn mt-2 ">{{ button_label|default('Save') }}</button>
+    <a class="layui-btn layui-btn layui-btn-normal mt-2" href="{{ path('userList') }}">Back to list</a>
     {{ form_end(form) }}
 
 </div>
