Add team interface

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -60,7 +60,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="pagesDropdown">
                 <a class="dropdown-item" href={{ path('userList') }}>Users</a>
-                <a class="dropdown-item" href="/admin/user-group">Groups</a>
+                <a class="dropdown-item" href="{{ path('userTeam') }}">Groups</a>
             </div>
         </li>
     </ul>
